--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <section class="conhecimentos" id="conhecimentos">
         <h1 id="texto">Meus Conhecimentos</h1>
         <div class="container1">
-            <img src="imagens/html-5.png" alt="imagem da logo do HTML">
-            <img src="imagens/css-3.png" alt="imagem da logo do CSS">
+            <img src="imagens/html.png" alt="imagem da logo do HTML">
+            <img src="imagens/css.png" alt="imagem da logo do CSS">
         </div>
         <div class="container2">
             <img src="imagens/sql.png" alt="imagem da logo do MySql">
@@ -129,15 +129,3 @@
 </body>
 
 </html>
-
-<!-- <div class="rodape">
-    <a href="index.html">
-        <h1 class="inicio2">Alissa Gabriel</h1>
-    </a>
-    <ul class="menu2">
-        <li><a href="#sobre-mim">Sobre Mim</li>
-        <li><a href="#conhecimentos">Conhecimentos</li></a>
-        <li><a href="#meus-projetos">Projetos</li></a>
-        <li><a href="#contato">Contato</a></li>
-    </ul>
-</div> -->
