--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <footer>
         <a href="index.html">
-            <h1 class="inicio">Alissa Gabriel</h1>
+            <h1 class="inicio2">Alissa Gabriel</h1>
         </a>
             <ul class="menu2">
                 <li><a href="#sobre-mim">Sobre Mim</li></a>
