--- a/index.html
+++ b/index.html
@@ -19,111 +19,125 @@
             <a href="index.html">
                 <h1 class="inicio">Alissa Gabriel</h1>
             </a>
-                <ul class="menu">
-                    <li><a href="#sobre-mim">Sobre Mim</li></a>
-                    <li><a href="#conhecimentos">Conhecimentos</li></a>
-                    <li><a href="#meus-projetos">Projetos</li></a>
-                    <li><a href="#contato">Contato</a></li>
-                </ul>
-        </nav>
-    </header>
-    <div class="animado">
-        <p>Bem vindo ao meu Portfólio</p>
-        <span></span>
-    </div>
-
-    <section class="sobre-mim" id="sobre-mim">
-        <h1 class="sobre">Sobre Mim</h1>
-        <h2 class="sobreMim">
-            Meu nome é Alissa Gabriel, tenho 18 anos, moro em Dois Córregos. Me formei na
-            Etec-Araraquara
-            em 2023
-            no curso Desenvolvimento De Sistemas Integrado ao Ensino Médio. Atualmente estou cursando o Primeiro
-            Semestre em
-            Desenvolvimento de Software Multiplataforma na Fatec-Jahu.</h2>
-    </section>
-
-    <figure>
-        <img class="imagem" src="imagens/foto.jpg" alt="Minha foto">
-    </figure>
-
-    <section class="conhecimentos" id="conhecimentos">
-        <h1 id="texto">Meus Conhecimentos</h1>
-        <div class="container1">
-            <img src="imagens/html.png" alt="imagem da logo do HTML">
-            <img src="imagens/css.png" alt="imagem da logo do CSS">
-        </div>
-        <div class="container2">
-            <img src="imagens/sql.png" alt="imagem da logo do MySql">
-            <img src="imagens/git.png" alt="imagem da logo do Git">
-            <img src="imagens/vscode.png" alt="imagem da logo do Visual Studio Code">
-        </div>
-    </section>
-
-    <section class="projetos" id="meus-projetos">
-        <h1 id="projeto">Meus Projetos</h1>
-        <div class="projetos1">
-            <div class="card1">
-                <a href="https://github.com/AlissaGabriel?tab=repositories">
-                    <img src="imagens/port1.PNG" alt="imagem do site do portfolio">
-                    <figcaption>Projetos <br>Desenvolvimento Web</figcaption>
-                </a>
-            </div>
-            <div class="card2">
-                <a href="https://github.com/AlissaGabriel/Algoritmos">
-                    <img src="imagens/port1.PNG" alt="imagem do site do portfolio">
-                    <figcaption>Projetos<br>Lógica e Programação de Algoritmos</figcaption>
-                </a>
-            </div>
-            <div class="card3">
-                <a href="https://github.com/AlissaGabriel/LojaDeRoupas">
-                    <img src="imagens/port1.PNG" alt="imagem do site do portfolio">
-                    <figcaption>Projeto - Prova 1 Desenvolvimento Web<br>Loja de Roupa em Html e Css</figcaption>
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <section class="contato" id="contato">
-        <h1 id="contatos">Contato</h1>
-        <div class="redes">
-            <a href="https://www.github.com/AlissaGabriel">
-                <img class="ima" src="imagens/github.png" alt="GitHub">
-            </a>
-            <a href="https://www.linkedin.com/in/AlissaGabriel">
-                <img class="imag" src="imagens/linkedin.png" alt="Linkedin">
-            </a>
-        </div>
-    </section>
-
-    <h1 class="fatec">Sobre a Fatec</h1>
-    <p class="fatec2">A Faculdade de Tecnologia de Jahu - FATEC-JAHU é uma Instituição Pública de <br>Ensino Superior
-        que oferece cursos de
-        graduação para formação de Tecnólogos, <br>visando atender segmentos atuais e emergentes da atividade econômica.
-    </p>
-    <div class="maps">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.038255333042!2d-48.550772624588!3d-22.314392916968647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c7583ac8032c15%3A0xd3db07d9284a5cb2!2sFaculdade%20de%20Tecnologia%20de%20Jahu!5e0!3m2!1spt-PT!2sbr!4v1715353796587!5m2!1spt-PT!2sbr"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <div class="fatec3">
-        <p>Contatos:
-            Email: f020dir@cps.sp.gov.br <br>
-            Tel: (14) 3622-8280 / 3622-8037 / 3621-9044</p>
-        <a href="https://fatecjahu.edu.br/">Site da Fatec-Jahu</a>
-    </div>
-
-    <footer>
-        <a href="index.html">
-            <h1 class="inicio2">Alissa Gabriel</h1>
-        </a>
-            <ul class="menu2">
+            <ul class="menu">
                 <li><a href="#sobre-mim">Sobre Mim</li></a>
                 <li><a href="#conhecimentos">Conhecimentos</li></a>
                 <li><a href="#meus-projetos">Projetos</li></a>
                 <li><a href="#contato">Contato</a></li>
             </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="animado">
+            <p>Bem vindo ao meu Portfólio</p>
+            <span></span>
+        </div>
+
+        <section class="sobre-mim" id="sobre-mim">
+            <h1 class="sobre">Sobre Mim</h1>
+            <h2 class="sobreMim">
+                Meu nome é Alissa Gabriel, tenho 18 anos, moro em Dois Córregos. Me formei na
+                Etec-Araraquara
+                em 2023
+                no curso Desenvolvimento De Sistemas Integrado ao Ensino Médio. Atualmente estou cursando o Primeiro
+                Semestre em
+                Desenvolvimento de Software Multiplataforma na Fatec-Jahu.</h2>
+        </section>
+
+        <figure>
+            <div class="foto">
+                <img class="imagem" src="imagens/foto.jpg" alt="Minha foto">
+            </div>
+        </figure>
+
+        <section class="conhecimentos" id="conhecimentos">
+            <h1 id="texto">Meus Conhecimentos</h1>
+            <div class="container1">
+                <img src="imagens/html.png" title="HTML 5" alt="imagem da logo do HTML">
+                <img src="imagens/css.png" title="CSS 3" alt="imagem da logo do CSS">
+            </div>
+            <div class="container2">
+                <img src="imagens/sql.png" title="MySql" alt="imagem da logo do MySql">
+                <img src="imagens/git.png" title="Git" alt="imagem da logo do Git">
+                <img src="imagens/vscode.png" title="Visual Studio Code" alt="imagem da logo do Visual Studio Code">
+            </div>
+        </section>
+
+        <section class="projetos" id="meus-projetos">
+            <h1 id="projeto">Meus Projetos</h1>
+            <div class="projetos1">
+                <div class="card1">
+                    <a href="https://github.com/Localize-Jahu">
+                        <img src="imagens/logo.png" title="Visite o meu Projeto Interdiscipliar" alt="imagem do site do portfolio">
+                        <figcaption>Projeto Interdisciplinar<br>Localize Jahu</figcaption>
+                    </a>
+                </div>
+                <div class="card2">
+                    <a href="https://github.com/AlissaGabriel/P1_ALGORITMO">
+                        <img src="imagens/algoritmo.png" title="Visite o meu projeto de Lógica e Programação de Algoritmos" alt="imagem do site do portfolio">
+                        <figcaption>Projeto - Prova 1<br>Lógica e Programação de Algoritmos</figcaption>
+                    </a>
+                </div>
+                <div class="card3">
+                    <a href="https://github.com/AlissaGabriel/LojaDeRoupas">
+                        <img src="imagens/desenvolvimento.png" title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
+                        <figcaption>Projeto - Prova 1 Desenvolvimento Web<br>Loja de Roupa em Html e Css</figcaption>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="contato" id="contato">
+            <h1 id="contatos">Contato</h1>
+            <div class="redes">
+                <a href="mailto:alissagabriel14@gmail.com">
+                    <img class="logo1" src="imagens/gmail.png" title="Gmail" alt="Gmail">
+                </a>
+                <a href="https://www.github.com/AlissaGabriel">
+                    <img class="logo2" src="imagens/github.png" title="GitHub" alt="GitHub">
+                </a>
+                <a href="https://www.linkedin.com/in/AlissaGabriel">
+                    <img class="logo3" src="imagens/linkedin.png" title="LinkedIn" alt="LinkedIn">
+                </a>
+            </div>
+        </section>
+
+        <h1 class="fatec">Sobre a Fatec</h1>
+        <p class="fatec2">A Faculdade de Tecnologia de Jahu - FATEC-JAHU é uma Instituição Pública de <br>Ensino
+            Superior
+            que oferece cursos de
+            graduação para formação de Tecnólogos, <br>visando atender segmentos atuais e emergentes da atividade
+            econômica.
+        </p>
+        <div class="maps">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.038255333042!2d-48.550772624588!3d-22.314392916968647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c7583ac8032c15%3A0xd3db07d9284a5cb2!2sFaculdade%20de%20Tecnologia%20de%20Jahu!5e0!3m2!1spt-PT!2sbr!4v1715353796587!5m2!1spt-PT!2sbr"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="fatec3">
+            <p>Contatos:
+                Email: f020dir@cps.sp.gov.br <br>
+                Tel: (14) 3622-8280 / 3622-8037 / 3621-9044</p>
+            <a href="https://fatecjahu.edu.br/" title="Visite o site da Fatec-Jahu">Site da Fatec-Jahu</a>
+        </div>
+    </main>
+    <footer>
+        <ul class="menu1">
+            <li><a href="https://www.github.com/AlissaGabriel">
+                    <img class="github" src="imagens/github.png" title="Dê uma olhada em meus projetos no GitHub"
+                        alt="GitHub">
+                </a></li>
+            <li><a href="mailto:alissagabriel14@gmail.com">
+                    <img class="gmail" src="imagens/gmail.png" title="Entre em contato comigo pelo Gmail" alt="Gmail">
+                </a></li>
+        </ul>
+        <ul class="menu2">
+            <li><a href="#sobre-mim">Sobre Mim</li></a>
+            <li><a href="#conhecimentos">Conhecimentos</li></a>
+            <li><a href="#meus-projetos">Projetos</li></a>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
         <p class="copy">&#169; Copyright 2024 Alissa Gabriel</p>
     </footer>
 </body>
