--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio</title>
-    <link rel="stylesheet" href="css/estilo.css" />
-    <link rel="stylesheet" href="css/sobremim.css">
-    <link rel="stylesheet" href="css/conhecimentos.css">
-    <link rel="stylesheet" href="css/projetos.css">
-    <link rel="stylesheet" href="css/contato.css">
-    <link rel="stylesheet" href="css/fatec.css">
+    <link rel="stylesheet" href="assets/css/estilo.css" />
+    <link rel="stylesheet" href="assets/css/sobremim.css">
+    <link rel="stylesheet" href="assets/css/conhecimentos.css">
+    <link rel="stylesheet" href="assets/css/projetos.css">
+    <link rel="stylesheet" href="assets/css/contato.css">
+    <link rel="stylesheet" href="assets/css/fatec.css">
 </head>
 
 <body>
@@ -46,20 +46,20 @@
 
         <figure>
             <div class="foto">
-                <img class="imagem" src="imagens/foto.jpg" alt="Minha foto">
+                <img class="imagem" src="assets/imagens/foto.jpg" alt="Minha foto">
             </div>
         </figure>
 
         <section class="conhecimentos" id="conhecimentos">
             <h1 id="texto">Meus Conhecimentos</h1>
             <div class="container1">
-                <img src="imagens/html.png" title="HTML 5" alt="imagem da logo do HTML">
-                <img src="imagens/css.png" title="CSS 3" alt="imagem da logo do CSS">
+                <img src="assets/imagens/html.png" title="HTML 5" alt="imagem da logo do HTML">
+                <img src="assets/imagens/css.png" title="CSS 3" alt="imagem da logo do CSS">
             </div>
             <div class="container2">
-                <img src="imagens/sql.png" title="MySql" alt="imagem da logo do MySql">
-                <img src="imagens/git.png" title="Git" alt="imagem da logo do Git">
-                <img src="imagens/vscode.png" title="Visual Studio Code" alt="imagem da logo do Visual Studio Code">
+                <img src="assets/imagens/sql.png" title="MySql" alt="imagem da logo do MySql">
+                <img src="assets/imagens/git.png" title="Git" alt="imagem da logo do Git">
+                <img src="assets/imagens/vscode.png" title="Visual Studio Code" alt="imagem da logo do Visual Studio Code">
             </div>
         </section>
 
@@ -68,19 +68,19 @@
             <div class="projetos1">
                 <div class="card1">
                     <a href="https://github.com/Localize-Jahu">
-                        <img src="imagens/logo.png" title="Visite o meu Projeto Interdiscipliar" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/logo.png" title="Visite o meu Projeto Interdiscipliar" alt="imagem do site do portfolio">
                         <figcaption>Projeto Interdisciplinar<br>Localize Jahu</figcaption>
                     </a>
                 </div>
                 <div class="card2">
                     <a href="https://github.com/AlissaGabriel/P1_ALGORITMO">
-                        <img src="imagens/algoritmo.png" title="Visite o meu projeto de Lógica e Programação de Algoritmos" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/algoritmo.png" title="Visite o meu projeto de Lógica e Programação de Algoritmos" alt="imagem do site do portfolio">
                         <figcaption>Projeto - Prova 1<br>Lógica e Programação de Algoritmos</figcaption>
                     </a>
                 </div>
                 <div class="card3">
                     <a href="https://github.com/AlissaGabriel/LojaDeRoupas">
-                        <img src="imagens/desenvolvimento.png" title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/desenvolvimento.png" title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
                         <figcaption>Projeto - Prova 1 Desenvolvimento Web<br>Loja de Roupa em Html e Css</figcaption>
                     </a>
                 </div>
@@ -91,13 +91,13 @@
             <h1 id="contatos">Contato</h1>
             <div class="redes">
                 <a href="mailto:alissagabriel14@gmail.com">
-                    <img class="logo1" src="imagens/gmail.png" title="Gmail" alt="Gmail">
+                    <img class="logo1" src="assets/imagens/gmail.png" title="Gmail" alt="Gmail">
                 </a>
                 <a href="https://www.github.com/AlissaGabriel">
-                    <img class="logo2" src="imagens/github.png" title="GitHub" alt="GitHub">
+                    <img class="logo2" src="assets/imagens/github.png" title="GitHub" alt="GitHub">
                 </a>
                 <a href="https://www.linkedin.com/in/AlissaGabriel">
-                    <img class="logo3" src="imagens/linkedin.png" title="LinkedIn" alt="LinkedIn">
+                    <img class="logo3" src="assets/imagens/linkedin.png" title="LinkedIn" alt="LinkedIn">
                 </a>
             </div>
         </section>
@@ -125,11 +125,11 @@
     <footer>
         <ul class="menu1">
             <li><a href="https://www.github.com/AlissaGabriel">
-                    <img class="github" src="imagens/github.png" title="Dê uma olhada em meus projetos no GitHub"
+                    <img class="github" src="assets/imagens/github.png" title="Dê uma olhada em meus projetos no GitHub"
                         alt="GitHub">
                 </a></li>
             <li><a href="mailto:alissagabriel14@gmail.com">
-                    <img class="gmail" src="imagens/gmail.png" title="Entre em contato comigo pelo Gmail" alt="Gmail">
+                    <img class="gmail" src="assets/imagens/gmail.png" title="Entre em contato comigo pelo Gmail" alt="Gmail">
                 </a></li>
         </ul>
         <ul class="menu2">
