--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                 </div>
                 <div class="card2">
                     <a href="https://github.com/AlissaGabriel/P1_ALGORITMO">
-                        <img src="assets/imagens/algoritmo.png" title="Visite o meu projeto de Lógica e Programação de Algoritmos" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/algoritmo.PNG" title="Visite o meu projeto de Lógica e Programação de Algoritmos" alt="imagem do site do portfolio">
                         <figcaption>Projeto - Prova 1<br>Lógica e Programação de Algoritmos</figcaption>
                     </a>
                 </div>
                 <div class="card3">
                     <a href="https://github.com/AlissaGabriel/LojaDeRoupas">
-                        <img src="assets/imagens/desenvolvimento.png" title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/desenvolvimento.PNG" title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
                         <figcaption>Projeto - Prova 1 Desenvolvimento Web<br>Loja de Roupa em Html e Css</figcaption>
                     </a>
                 </div>
