--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <section class="sobre-mim" id="sobre-mim">
-            <h1 class="sobre">Sobre Mim</h1>
+            <h1 class="titulo">Sobre Mim</h1>
             <h2 class="sobreMim">
                 Meu nome é Alissa Gabriel, tenho 18 anos, moro em Dois Córregos. Me formei na
                 Etec-Araraquara
