--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header>
         <nav>
             <a href="index.html">
-                <h1 class="inicio">Alissa Gabriel</h1>
+                <div class="inicio">Alissa Gabriel</div>
             </a>
             <ul class="menu">
-                <li><a href="#sobre-mim">Sobre Mim</li></a>
-                <li><a href="#conhecimentos">Conhecimentos</li></a>
-                <li><a href="#meus-projetos">Projetos</li></a>
+                <li><a href="#sobre-mim">Sobre Mim</a></li>
+                <li><a href="#conhecimentos">Conhecimentos</a></li>
+                <li><a href="#meus-projetos">Projetos</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -59,7 +59,8 @@
             <div class="container2">
                 <img src="assets/imagens/sql.png" title="MySql" alt="imagem da logo do MySql">
                 <img src="assets/imagens/git.png" title="Git" alt="imagem da logo do Git">
-                <img src="assets/imagens/vscode.png" title="Visual Studio Code" alt="imagem da logo do Visual Studio Code">
+                <img src="assets/imagens/vscode.png" title="Visual Studio Code"
+                    alt="imagem da logo do Visual Studio Code">
             </div>
         </section>
 
@@ -68,19 +69,23 @@
             <div class="projetos1">
                 <div class="card1">
                     <a href="https://github.com/Localize-Jahu">
-                        <img src="assets/imagens/logo.png" title="Visite o meu Projeto Interdiscipliar" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/logo.png" title="Visite o meu Projeto Interdiscipliar"
+                            alt="imagem do site do portfolio">
                         <figcaption>Projeto Interdisciplinar<br>Localize Jahu</figcaption>
                     </a>
                 </div>
                 <div class="card2">
                     <a href="https://github.com/AlissaGabriel/P1_ALGORITMO">
-                        <img src="assets/imagens/algoritmo.PNG" title="Visite o meu projeto de Lógica e Programação de Algoritmos" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/algoritmo.PNG"
+                            title="Visite o meu projeto de Lógica e Programação de Algoritmos"
+                            alt="imagem do site do portfolio">
                         <figcaption>Projeto - Prova 1<br>Lógica e Programação de Algoritmos</figcaption>
                     </a>
                 </div>
                 <div class="card3">
                     <a href="https://github.com/AlissaGabriel/LojaDeRoupas">
-                        <img src="assets/imagens/desenvolvimento.PNG" title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
+                        <img src="assets/imagens/desenvolvimento.PNG"
+                            title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
                         <figcaption>Projeto - Prova 1 Desenvolvimento Web<br>Loja de Roupa em Html e Css</figcaption>
                     </a>
                 </div>
@@ -90,7 +95,7 @@
         <section class="contato" id="contato">
             <h1 id="contatos">Contato</h1>
             <div class="redes">
-                <a href="mailto:alissagabriel14@gmail.com">
+                <a href="mailto:alissagabriel7@gmail.com">
                     <img class="logo1" src="assets/imagens/gmail.png" title="Gmail" alt="Gmail">
                 </a>
                 <a href="https://www.github.com/AlissaGabriel">
@@ -128,8 +133,9 @@
                     <img class="github" src="assets/imagens/github.png" title="Dê uma olhada em meus projetos no GitHub"
                         alt="GitHub">
                 </a></li>
-            <li><a href="mailto:alissagabriel14@gmail.com">
-                    <img class="gmail" src="assets/imagens/gmail.png" title="Entre em contato comigo pelo Gmail" alt="Gmail">
+            <li><a href="mailto:alissagabriel7@gmail.com">
+                    <img class="gmail" src="assets/imagens/gmail.png" title="Entre em contato comigo pelo Gmail"
+                        alt="Gmail">
                 </a></li>
         </ul>
         <ul class="menu2">
