--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
-    <link rel="stylesheet" href="assets/css/estilo.css" />
+    <link rel="stylesheet" href="assets/css/estilo.css">
     <link rel="stylesheet" href="assets/css/sobremim.css">
     <link rel="stylesheet" href="assets/css/conhecimentos.css">
     <link rel="stylesheet" href="assets/css/projetos.css">
@@ -71,23 +71,23 @@
                     <a href="https://github.com/Localize-Jahu">
                         <img src="assets/imagens/logo.png" title="Visite o meu Projeto Interdiscipliar"
                             alt="imagem do site do portfolio">
-                        <figcaption>Projeto Interdisciplinar<br>Localize Jahu</figcaption>
                     </a>
+                    <figcaption>Projeto Interdisciplinar<br>Localize Jahu</figcaption>
                 </div>
                 <div class="card2">
                     <a href="https://github.com/AlissaGabriel/P1_ALGORITMO">
                         <img src="assets/imagens/algoritmo.PNG"
                             title="Visite o meu projeto de Lógica e Programação de Algoritmos"
                             alt="imagem do site do portfolio">
-                        <figcaption>Projeto - Prova 1<br>Lógica e Programação de Algoritmos</figcaption>
                     </a>
+                    <figcaption>Projeto - Prova 1<br>Lógica e Programação de Algoritmos</figcaption>
                 </div>
                 <div class="card3">
                     <a href="https://github.com/AlissaGabriel/LojaDeRoupas">
                         <img src="assets/imagens/desenvolvimento.PNG"
                             title="Visite o meu projeto de Desenvolvimento Web" alt="imagem do site do portfolio">
-                        <figcaption>Projeto - Prova 1 Desenvolvimento Web<br>Loja de Roupa em Html e Css</figcaption>
                     </a>
+                    <figcaption>Projeto - Prova 1 Desenvolvimento Web<br>Loja de Roupa em Html e Css</figcaption>
                 </div>
             </div>
         </section>
@@ -139,9 +139,9 @@
                 </a></li>
         </ul>
         <ul class="menu2">
-            <li><a href="#sobre-mim">Sobre Mim</li></a>
-            <li><a href="#conhecimentos">Conhecimentos</li></a>
-            <li><a href="#meus-projetos">Projetos</li></a>
+            <li><a href="#sobre-mim">Sobre Mim</a></li>
+            <li><a href="#conhecimentos">Conhecimentos</a></li>
+            <li><a href="#meus-projetos">Projetos</a></li>
             <li><a href="#contato">Contato</a></li>
         </ul>
         <p class="copy">&#169; Copyright 2024 Alissa Gabriel</p>
